changed background image

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("../public/img/stickyBack.pdf");
+  background-image: url("../public/img/stickyNoteImage.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
